infrastructure/gitops/app/fastapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: port1
      port: 8080
      targetPort: 8000
      protocol: TCP
