infrastructure/gitops/app/fastapi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - fastapi-app.com
  rules:
  - host: fastapi-app.com # fake domain name, edit your hosts file and specify the Load Balancer IP for this domain
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 8000
        path: /docs
        pathType: Prefix
